# TRT-LLM

./: .gitignore  .gitmodules  build_cpp_examples.sh  build_qwen_engine.sh  dockerfile  refresh_docker.sh  requirements.txt  run_docker.sh  run_linux_vpn.sh
src/: .clang-format
src/baselines/: CMakeLists.txt  baselines.cpp  baselines.hpp  main.cpp  plot.py  schemas.hpp
src/cpp_baselines/: create_plots.py  main.cpp  schemas.hpp
src/cpp_kv_caches/: kv_caches.cpp  kv_caches.hpp  main.cpp  schemas.hpp
src/logger/: logger.cpp  logger.hpp
src/python_baselines/: create_py_plots.py
src/scripts/: build.sh  build_cpp_examples.sh  build_qwen_engine.sh  format.sh
